src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) int TrackerMIL_Params_samplerTrackMaxNegNum_get(void* self);
extern "C" __declspec(dllexport) void TrackerMIL_Params_samplerTrackMaxNegNum_set(void* self, int val);
extern "C" __declspec(dllexport) int TrackerMIL_Params_featureSetNumFeatures_get(void* self);
extern "C" __declspec(dllexport) void TrackerMIL_Params_featureSetNumFeatures_set(void* self, int val);
extern "C" __declspec(dllexport) void TrackerNano_Delete(void* self);
extern "C" __declspec(dllexport) void* TrackerNano_create_0(void* parameters);
extern "C" __declspec(dllexport) void TrackerNano_Params_Delete(void* self);
extern "C" __declspec(dllexport) void* TrackerNano_Params_New_0();
extern "C" __declspec(dllexport) const char* TrackerNano_Params_backbone_get(void* self);
extern "C" __declspec(dllexport) void TrackerNano_Params_backbone_set(void* self, const char* val);
extern "C" __declspec(dllexport) const char* TrackerNano_Params_neckhead_get(void* self);
extern "C" __declspec(dllexport) void TrackerNano_Params_neckhead_set(void* self, const char* val);
extern "C" __declspec(dllexport) int TrackerNano_Params_backend_get(void* self);
extern "C" __declspec(dllexport) void TrackerNano_Params_backend_set(void* self, int val);
extern "C" __declspec(dllexport) int TrackerNano_Params_target_get(void* self);
extern "C" __declspec(dllexport) void TrackerNano_Params_target_set(void* self, int val);
extern "C" __declspec(dllexport) void TrackerVit_Delete(void* self);
extern "C" __declspec(dllexport) void* TrackerVit_create_0(void* parameters);
extern "C" __declspec(dllexport) void TrackerVit_Params_Delete(void* self);
extern "C" __declspec(dllexport) void* TrackerVit_Params_New_0();
extern "C" __declspec(dllexport) const char* TrackerVit_Params_net_get(void* self);
extern "C" __declspec(dllexport) void TrackerVit_Params_net_set(void* self, const char* val);
extern "C" __declspec(dllexport) int TrackerVit_Params_backend_get(void* self);
extern "C" __declspec(dllexport) void TrackerVit_Params_backend_set(void* self, int val);
extern "C" __declspec(dllexport) int TrackerVit_Params_target_get(void* self);
extern "C" __declspec(dllexport) void TrackerVit_Params_target_set(void* self, int val);
extern "C" __declspec(dllexport) cv::Scalar TrackerVit_Params_meanvalue_get(void* self);
extern "C" __declspec(dllexport) void TrackerVit_Params_meanvalue_set(void* self, cv::Scalar val);
extern "C" __declspec(dllexport) cv::Scalar TrackerVit_Params_stdvalue_get(void* self);
extern "C" __declspec(dllexport) void TrackerVit_Params_stdvalue_set(void* self, cv::Scalar val);
extern "C" __declspec(dllexport) float TrackerVit_Params_tracking_score_threshold_get(void* self);
extern "C" __declspec(dllexport) void TrackerVit_Params_tracking_score_threshold_set(void* self, float val);
extern "C" __declspec(dllexport) void VariationalRefinement_Delete(void* self);
extern "C" __declspec(dllexport) void VariationalRefinement_calcUV_0(void* self, void* I0, void* I1, void* flow_u, void* flow_v);
extern "C" __declspec(dllexport) int VariationalRefinement_getFixedPointIterations_0(void* self);
extern "C" __declspec(dllexport) void VariationalRefinement_setFixedPointIterations_0(void* self, int val);
extern "C" __declspec(dllexport) int VariationalRefinement_getSorIterations_0(void* self);
extern "C" __declspec(dllexport) void VariationalRefinement_setSorIterations_0(void* self, int val);
extern "C" __declspec(dllexport) float VariationalRefinement_getOmega_0(void* self);
extern "C" __declspec(dllexport) void VariationalRefinement_setOmega_0(void* self, float val);
extern "C" __declspec(dllexport) float VariationalRefinement_getAlpha_0(void* self);
extern "C" __declspec(dllexport) void VariationalRefinement_setAlpha_0(void* self, float val);
extern "C" __declspec(dllexport) float VariationalRefinement_getDelta_0(void* self);
extern "C" __declspec(dllexport) void VariationalRefinement_setDelta_0(void* self, float val);
extern "C" __declspec(dllexport) float VariationalRefinement_getGamma_0(void* self);
extern "C" __declspec(dllexport) void VariationalRefinement_setGamma_0(void* self, float val);
extern "C" __declspec(dllexport) float VariationalRefinement_getEpsilon_0(void* self);
extern "C" __declspec(dllexport) void VariationalRefinement_setEpsilon_0(void* self, float val);
extern "C" __declspec(dllexport) void* VariationalRefinement_create_0();
extern "C" __declspec(dllexport) void* cv_createBackgroundSubtractorMOG2_0(int history, double varThreshold, bool detectShadows);
extern "C" __declspec(dllexport) void* cv_createBackgroundSubtractorKNN_0(int history, double dist2Threshold, bool detectShadows);
extern "C" __declspec(dllexport) void* cv_CamShift_0(void* probImage, cv::Rect window, cv::TermCriteria criteria);
extern "C" __declspec(dllexport) int cv_meanShift_0(void* probImage, cv::Rect window, cv::TermCriteria criteria);
extern "C" __declspec(dllexport) int cv_buildOpticalFlowPyramid_0(void* img, void* pyramid, cv::Size winSize, int maxLevel, bool withDerivatives, int pyrBorder, int derivBorder, bool tryReuseInputImage);
extern "C" __declspec(dllexport) void cv_calcOpticalFlowPyrLK_0(void* prevImg, void* nextImg, void* prevPts, void* nextPts, void* status, void* err, cv::Size winSize, int maxLevel, cv::TermCriteria criteria, int flags, double minEigThreshold);
extern "C" __declspec(dllexport) void cv_calcOpticalFlowFarneback_0(void* prev, void* next, void* flow, double pyr_scale, int levels, int winsize, int iterations, int poly_n, double poly_sigma, int flags);
extern "C" __declspec(dllexport) double cv_computeECC_0(void* templateImage, void* inputImage, void* inputMask);
extern "C" __declspec(dllexport) double cv_findTransformECC_0(void* templateImage, void* inputImage, void* warpMatrix, int motionType, cv::TermCriteria criteria, void* inputMask, int gaussFiltSize);
extern "C" __declspec(dllexport) double cv_findTransformECC_1(void* templateImage, void* inputImage, void* warpMatrix, int motionType, cv::TermCriteria criteria, void* inputMask);