src/OpenCV5Sharp/Generated/NativeMethods.Video.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int TrackerMIL_Params_samplerTrackMaxNegNum_get(TrackerMILParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerMIL_Params_samplerTrackMaxNegNum_set(TrackerMILParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int TrackerMIL_Params_featureSetNumFeatures_get(TrackerMILParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerMIL_Params_featureSetNumFeatures_set(TrackerMILParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerNano_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr TrackerNano_create_0(IntPtr parameters);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerNano_Params_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr TrackerNano_Params_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr TrackerNano_Params_backbone_get(TrackerNanoParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerNano_Params_backbone_set(TrackerNanoParamsHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr TrackerNano_Params_neckhead_get(TrackerNanoParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerNano_Params_neckhead_set(TrackerNanoParamsHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int TrackerNano_Params_backend_get(TrackerNanoParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerNano_Params_backend_set(TrackerNanoParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int TrackerNano_Params_target_get(TrackerNanoParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerNano_Params_target_set(TrackerNanoParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerVit_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr TrackerVit_create_0(IntPtr parameters);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerVit_Params_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr TrackerVit_Params_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr TrackerVit_Params_net_get(TrackerVitParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerVit_Params_net_set(TrackerVitParamsHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int TrackerVit_Params_backend_get(TrackerVitParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerVit_Params_backend_set(TrackerVitParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int TrackerVit_Params_target_get(TrackerVitParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerVit_Params_target_set(TrackerVitParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Scalar TrackerVit_Params_meanvalue_get(TrackerVitParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerVit_Params_meanvalue_set(TrackerVitParamsHandle self, Scalar val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Scalar TrackerVit_Params_stdvalue_get(TrackerVitParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerVit_Params_stdvalue_set(TrackerVitParamsHandle self, Scalar val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float TrackerVit_Params_tracking_score_threshold_get(TrackerVitParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerVit_Params_tracking_score_threshold_set(TrackerVitParamsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VariationalRefinement_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VariationalRefinement_calcUV_0(VariationalRefinementHandle self, MatHandle I0, MatHandle I1, MatHandle flow_u, MatHandle flow_v);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int VariationalRefinement_getFixedPointIterations_0(VariationalRefinementHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VariationalRefinement_setFixedPointIterations_0(VariationalRefinementHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int VariationalRefinement_getSorIterations_0(VariationalRefinementHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VariationalRefinement_setSorIterations_0(VariationalRefinementHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float VariationalRefinement_getOmega_0(VariationalRefinementHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VariationalRefinement_setOmega_0(VariationalRefinementHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float VariationalRefinement_getAlpha_0(VariationalRefinementHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VariationalRefinement_setAlpha_0(VariationalRefinementHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float VariationalRefinement_getDelta_0(VariationalRefinementHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VariationalRefinement_setDelta_0(VariationalRefinementHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float VariationalRefinement_getGamma_0(VariationalRefinementHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VariationalRefinement_setGamma_0(VariationalRefinementHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float VariationalRefinement_getEpsilon_0(VariationalRefinementHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VariationalRefinement_setEpsilon_0(VariationalRefinementHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr VariationalRefinement_create_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_createBackgroundSubtractorMOG2_0(int history, double varThreshold, [MarshalAs(UnmanagedType.U1)] bool detectShadows);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_createBackgroundSubtractorKNN_0(int history, double dist2Threshold, [MarshalAs(UnmanagedType.U1)] bool detectShadows);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_CamShift_0(MatHandle probImage, Rect window, TermCriteria criteria);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cv_meanShift_0(MatHandle probImage, Rect window, TermCriteria criteria);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cv_buildOpticalFlowPyramid_0(MatHandle img, IntPtr pyramid, Size winSize, int maxLevel, [MarshalAs(UnmanagedType.U1)] bool withDerivatives, int pyrBorder, int derivBorder, [MarshalAs(UnmanagedType.U1)] bool tryReuseInputImage);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_calcOpticalFlowPyrLK_0(MatHandle prevImg, MatHandle nextImg, MatHandle prevPts, MatHandle nextPts, MatHandle status, MatHandle err, Size winSize, int maxLevel, TermCriteria criteria, int flags, double minEigThreshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_calcOpticalFlowFarneback_0(MatHandle prev, MatHandle next, MatHandle flow, double pyr_scale, int levels, int winsize, int iterations, int poly_n, double poly_sigma, int flags);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_computeECC_0(MatHandle templateImage, MatHandle inputImage, IntPtr inputMask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_findTransformECC_0(MatHandle templateImage, MatHandle inputImage, MatHandle warpMatrix, int motionType, TermCriteria criteria, MatHandle inputMask, int gaussFiltSize);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_findTransformECC_1(MatHandle templateImage, MatHandle inputImage, MatHandle warpMatrix, int motionType, TermCriteria criteria, IntPtr inputMask);
